--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "gigawatts": "^4.0.5",
     "goblin-nabu": "^2.0.0",
+    "goblin-desktop": "^2.0.16",
     "goblin-workshop": "^2.0.0",
     "lodash": "^4.17.19",
     "xcraft-core-etc": "^3.0.0",
