Add missing dep

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "goblin-nabu": "^2.0.0",
     "goblin-desktop": "^4.0.0",
     "goblin-workshop": "^3.0.0",
+    "langmap": "^0.0.16",
     "lodash": "^4.17.19",
     "xcraft-core-etc": "^3.0.0",
     "xcraft-core-goblin": "^5.0.0",
